test/files/neg/static_restriction3.check
static_restriction3.scala:6: error: @static members are only allowed inside objects
    @static def method = 1
                ^
static_restriction3.scala:7: error: @static members are only allowed inside objects
    @static val field1 = 1
                ^
static_restriction3.scala:8: error: @static members are only allowed inside objects
    @static var field2 = 1
                ^
static_restriction3.scala:15: error: @static members are only allowed inside objects
    @static def method = 1
                ^
static_restriction3.scala:16: error: @static members are only allowed inside objects
    @static val field1 = 1
                ^
static_restriction3.scala:17: error: @static members are only allowed inside objects
    @static var field2 = 1
                ^
static_restriction3.scala:25: error: @static members are only allowed inside objects
      @static def method = 1
                  ^
static_restriction3.scala:26: error: @static members are only allowed inside objects
      @static val field1 = 1
                  ^
static_restriction3.scala:27: error: @static members are only allowed inside objects
      @static var field2 = 1
                  ^
9 errors found
